--- a/src/views/pages/profile.ejs
+++ b/src/views/pages/profile.ejs
@@ -15,10 +15,11 @@
     <title>DCTinder - Profile</title>
   </head>
   <body>
-    <%- include('../../modules/UI/navbar'); -%>
+   <div class="nav">
+      <%- include('../../modules/UI/navbar'); -%>
+   </div>
     <div class="main">
-      <div class="card">
-
+      <div class="card" id="card">
         <div class="user">
           <div class="header">
             <img
@@ -54,4 +55,6 @@
       
     </div>
   </body>
+  <script>
+  </script>
 </html>
