--- a/src/views/styles/_abstract/root.css
+++ b/src/views/styles/_abstract/root.css
@@ -4,7 +4,7 @@
 --heading-font: 'Degular', sans-serif;
 --title-font: "Open Sasn", sans-serif;
 --red: rgb(255, 33, 70);
---black: rgb(24,29,35);
+--black: rgb(24, 29, 35);
 --box-shadow: rgba(24, 29, 35, 0.25);
 --box-shadow-red: rgba(255, 33, 70, 0.25);
 --off-black: rgb(28,31,35);
@@ -27,4 +27,8 @@ a {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+}
+
+.hidden {
+    display: none !important;
 }
