--- a/src/views/styles/_pages/profile.css
+++ b/src/views/styles/_pages/profile.css
@@ -1,5 +1,6 @@
 .nav {
-    position: fixed;
+    position: fixed !important;
+    z-index: 999;
 }
 body {
     background-color: var(--bg-black);
@@ -23,6 +24,7 @@ a {
     border-radius: 25px;
     display: flex;
     padding: 10px;
+    transition: .5s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 .user {
     background: var(--purple-fade);
@@ -66,48 +68,6 @@ a {
     margin-bottom: 20px;
 }
 
-.guilds::-webkit-scrollbar {
-    display: none;
-}
-
-.guilds {
-    overflow: scroll;
-    width: 60%;
-    margin-right: 1.25rem;
-}
-
-.guildCard {
-    padding: 20px;
-    background: var(--bg-black);
-    border-radius: 20px;
-    margin-bottom: 20px;
-    display: flex;
-    justify-content: space-between;
-}
-.top {
-    display: flex;
-}
-.top img {
-    height: 100px;
-    width: inherit;
-    border-radius: 100%;
-    box-shadow: 0px 0px 5px var(--off-white-glass);
-    transition: .3s cubic-bezier(0.075, 0.82, 0.165, 1);
-}
-.top img:hover {
-     box-shadow: 0px 0px 20px var(--off-white-glass);
-}
-.top h1 {
-    margin-top: 30px;
-    margin-left: 30px;
-    color: var(--off-white);
-    opacity: .5;
-    font-family: var(--heading-font);
-    transition: .3s cubic-bezier(0.075, 0.82, 0.165, 1);
-}
-.top h1:hover {
-    opacity: 1;
-}
 .button {
     margin-top: 30px;
 }
