--- a/src/views/pages/home.ejs
+++ b/src/views/pages/home.ejs
@@ -12,6 +12,7 @@
       href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="/assets/Tinder DC Proto.png" type="image/x-icon">
     <title>DCTinder - find your perfect e dates 😭</title>
 </head>
 <body>
@@ -20,11 +21,11 @@
    </div>
     <div class="main__container">
       <div class="header">
-        <h1>Simple, Fast & For Everyone!</h1>
-        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam fugit maxime doloribus deserunt nihil perferendis, et quas saepe? Cumque nulla minus aut voluptatibus dolor soluta.</h3>
+        <h1>DCTinder, Easy And Effective.</h1>
+        <h3>Taking discord edates to the moon 🚀 Easily find the perfect one for you! View each person's profile, Find out about them. And get in contact.</h3>
         <div class="buttons">
           <a href="/auth/login" class="btn primary">Login</a>
-          <a href="/discord" class="btn secondary">Support</a>
+          <a href="/support" class="btn secondary">Support</a>
         </div>
       </div>
     </div>
