--- a/src/views/styles/_pages/blocked.css
+++ b/src/views/styles/_pages/blocked.css
@@ -7,7 +7,7 @@ body {
 }
 
 
-h1, p {
+.main h1, .main p {
     font-family: var(--heading-font);
     font-weight: 600;
     font-size: 5rem;
@@ -20,7 +20,7 @@ h1, p {
    transition: 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
-h1 {
+.main h1 {
     color: var(--off-white);
     font-family: var(--heading-font);
     margin-bottom: 3rem;
