--- a/src/views/styles/_pages/profile.css
+++ b/src/views/styles/_pages/profile.css
@@ -1,73 +1,214 @@
 .nav {
-    position: fixed !important;
-    z-index: 999;
+  position: fixed !important;
+  z-index: 999;
 }
 body {
-    background-color: var(--bg-black);
-    position: fixed !important;
+  background-color: var(--bg-black);
+  position: fixed !important;
 }
 
 a {
-    text-decoration:  none;
+  text-decoration: none;
 }
 .main {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 17vh;
-    margin-left: 22vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 17vh;
+  margin-left: 22vw;
 }
 .card {
-    background: var(--grad-bg-purple);
-    width: 60vw;
-    height: 60vh;
-    border-radius: 25px;
-    display: flex;
-    padding: 10px;
-    transition: .5s cubic-bezier(0.075, 0.82, 0.165, 1);
+  background: var(--black2);
+  width: 60vw;
+  height: 60vh;
+  border-radius: 25px;
+  display: flex;
+  padding: 10px;
+  transition: 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 .user {
-    background: var(--purple-fade);
-    backdrop-filter: blur(0.7);
-    width: 35%;
-    height: 100%;
-    border-radius: 25px;
+  background: var(--bg-black);
+  backdrop-filter: blur(0.7);
+  width: 35%;
+  height: 100%;
+  border-radius: 25px;
 }
 .header {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 3rem;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 3rem;
 }
 .header img {
-    width: 128px;
-    height: 128px;
-    border-radius: 100%;
+  width: 128px;
+  height: 128px;
+  border-radius: 100%;
 }
 .header h1 {
-    color: var(--off-white);
-    opacity: 0.5;
-    font-family: var(--heading-font);
-    transition: .3s cubic-bezier(0.075, 0.82, 0.165, 1);
+  color: var(--off-white);
+  opacity: 0.5;
+  font-family: var(--heading-font);
+  transition: 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 .header h1:hover {
-    opacity: 1;
-    letter-spacing: 0.5rem;
+  opacity: 1;
+  letter-spacing: 0.5rem;
 }
 
-
-.buttons{
-   margin: 3rem 10px 10px 10px;
-   display: flex;
-   flex-direction: column;
-   text-align: center;
+.buttons {
+  margin: 3rem 10px 10px 10px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
 }
 .buttons a {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 .button {
-    margin-top: 30px;
+  margin-top: 30px;
+}
+
+.boxes {
+  display: flex;
+  justify-content: space-evenly;
+  margin-left: 0.75rem;
+}
+.stat-header {
+  margin-left: 2rem;
+  margin-bottom: 1.5rem;
+}
+.stat-header h1 {
+  color: var(--off-white);
+  opacity: 0.5;
+  font-family: var(--heading-font);
+  transition: 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+.stat-header h1:hover {
+  opacity: 1;
+  letter-spacing: 0.5rem;
+}
+.box {
+  background: var(--bg-black);
+  backdrop-filter: blur(0.7);
+  padding: 15px;
+  border-radius: 25px;
+  width: 15rem;
+  height: 10rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 2rem;
+}
+.box:last-child {
+  margin-left: 2.5rem;
+}
+.box-header {
+  margin-top: 10%;
+}
+.box-header h1 {
+  color: var(--off-white);
+  font-size: 1.25rem;
+  opacity: 0.5;
+  font-family: var(--heading-font);
+}
+.box-info p {
+  color: var(--off-white);
+  font-size: 3rem;
+  font-family: var(--heading-font);
+}
+.leftcard::-webkit-scrollbar {
+  display: none;
+}
+.leftcard {
+  overflow: scroll;
+  overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
+}
+.bio {
+  width: 35rem;
+  height: 10rem;
+  margin-left: 2rem;
+  background-color: var(--bg-black);
+  margin-bottom: 2rem;
+  border-radius: 25px;
+  overflow: scroll;
+  padding: 10px 25px 25px 25px;
+}
+
+.bio::-webkit-scrollbar {
+  display: none;
+}
+
+.bio p {
+  color: var(--off-white);
+  opacity: 0.75;
+  font-size: 1rem;
+  font-weight: 60;
+  font-family: var(--heading-font);
+}
+
+.biouser {
+  margin-top: 1.25rem;
+  display: none;
+  background: var(--black2);
+  padding: 10px;
+  height: 8vh;
+  width: 50vw;
+  border-radius: 20px;
+  overflow: scroll;
+}
+
+.biouser::-webkit-scrollbar {
+  display: none;
+}
+.about {
+  color: var(--off-white);
+  opacity: 0.75;
+  font-size: 1rem;
+  font-weight: 60;
+  font-family: var(--heading-font);
+}
+
+@media screen and (max-width: 1415px) {
+  .aboutUserHeading,
+  .boxies {
+    display: none;
+  }
+  .user {
+    width: 100%;
+  }
+  .biouser {
+    display: block;
+  }
+  .buttons {
+    margin: 2rem 10px 10px 10px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .main {
+    margin-left: 10vw;
+  }
+  .card {
+    display: flex;
+    flex-direction: column;
+    height: 69vh;
+    width: 80vw;
+  }
+  .biouser {
+    width: 67vw;
+    height: 10vh;
+  }
+}
+
+
+@media screen and (max-height: 900px) {
+    .card {
+        height: 67vh;
+    }
 }
