🚀 Added option to change user bio, fixed some errors. Need to work on search system

--- a/src/views/pages/401.ejs
+++ b/src/views/pages/401.ejs
@@ -7,10 +7,19 @@
     <link rel="stylesheet" href="/styles/_pages/401.css" />
     <link rel="stylesheet" href="/styles/_abstract/root.css" />
     <link rel="stylesheet" href="/styles/_abstract/button.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+        <link
+      rel="shortcut icon"
+      href="/assets/Tinder DC Proto.png"
+      type="image/x-icon"
+    />
     <title>DCTinder - Please login!</title>
   </head>
   <body>
-      <h1>Please Login To access this!</h1>
-      <a href="/auth/login" class="btn primary">Login</a>
+    <h1>Please Login To access this!</h1>
+    <div class="buttons">
+      <a href="/auth/login" class="btn secondary">Login</a>
+      <a href="/" class="btn primary">Home</a>
+    </div>
   </body>
 </html>
