--- a/src/views/pages/reported.ejs
+++ b/src/views/pages/reported.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/styles/_abstract/root.css" />
     <link rel="stylesheet" href="/styles/_abstract/button.css" />
     <link rel="stylesheet" href="/styles/_components/navbar.css" />
@@ -12,13 +12,22 @@
       href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <title>DCTinder - Block User</title>
-</head>
-<body>
-     <%- include('../../modules/UI/navbar'); -%>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+        <link
+      rel="shortcut icon"
+      href="/assets/Tinder DC Proto.png"
+      type="image/x-icon"
+    />
+    <title>DCTinder - Report User</title>
+  </head>
+  <body>
+    <%- include('../../modules/UI/navbar'); -%>
     <div class="main">
-         <h1>User "<span class="user"><%=reportedUser.username%></span>" has been reported</h1>
-        <a href="/profile" class="btn primary">Back to profile</a>
+      <h1>
+        User "<span class="user"><%=reportedUser.username%></span>" has been
+        reported
+      </h1>
+      <a href="/profile" class="btn primary">Back to profile</a>
     </div>
-</body>
+  </body>
 </html>
