--- a/src/views/pages/sorryToSeeYouGo.ejs
+++ b/src/views/pages/sorryToSeeYouGo.ejs
@@ -8,16 +8,15 @@
     <link rel="stylesheet" href="/styles/_abstract/root.css" />
     <link rel="stylesheet" href="/styles/_abstract/button.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <link
+        <link
       rel="shortcut icon"
       href="/assets/Tinder DC Proto.png"
       type="image/x-icon"
     />
-    <title>DCTinder - <%= header %></title>
+    <title>DCTinder - Sorry To See You Go</title>
   </head>
   <body>
-    <h1><%= reason %></h1>
-
-    <a href="/profile" class="btn primary">Back to profile</a>
+    <h1>Its sad to see you go! We hope to see you back here again another time 😭</h1>
+    <a href="/profile" class="btn primary">Home :(</a>
   </body>
 </html>
